# Research-Taste-OS

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  research_taste_os_workflow.md
skills/research-taste-os/: SKILL.md
skills/research-taste-os/agents/: openai.yaml
skills/research-taste-os/references/: notion-workflow.md
src/research_taste_os/: __init__.py  cli.py  config.py  llm_client.py  notion_client.py  prompts.py  schema.py
src/research_taste_os/utils/: notion_blocks.py  pdf_text.py  scoring.py
src/research_taste_os/workflows/: __init__.py  core.py
tests/: test_scoring.py
